--- a/package.json
+++ b/package.json
@@ -1,4 +1,3 @@
-
 {
   "name": "@modelcontextprotocol/slack-server",
   "version": "0.1.0",
@@ -18,9 +17,11 @@
     "inspector": "npx @modelcontextprotocol/inspector build/index.js"
   },
   "dependencies": {
-    "@modelcontextprotocol/sdk": "1.0.1"
+    "@modelcontextprotocol/sdk": "1.0.1",
+    "dotenv": "^16.5.0"
   },
   "devDependencies": {
+    "@types/dotenv": "^6.1.1",
     "@types/node": "^22",
     "shx": "^0.3.4",
     "typescript": "^5.6.2"
