--- a/smithery.yaml
+++ b/smithery.yaml
@@ -1,4 +1,4 @@
-# Smithery configuration file: https://smithery.ai/docs/config#smitheryyaml
+# Smithery configuration file: [https://smithery.ai/docs/config#smitheryyaml](https://smithery.ai/docs/config#smitheryyaml)
 
 startCommand:
   type: stdio
@@ -6,23 +6,26 @@ startCommand:
     # JSON Schema defining the configuration options for the MCP.
     type: object
     required:
-      - slackBotToken
-      - slackTeamId
+      - SLACK_BOT_TOKEN
+      - SLACK_TEAM_ID
     properties:
-      slackBotToken:
+      SLACK_BOT_TOKEN:
         type: string
-        description: The Bot User OAuth Token for the Slack app.
-      slackTeamId:
+        description: The Bot User OAuth Token for the Slack app
+      SLACK_TEAM_ID:
         type: string
-        description: The Slack Team ID for the workspace.
+        description: The Slack Team ID for the workspace
   commandFunction:
-    # A function that produces the CLI command to start the MCP on stdio.
+    # A JS function that produces the CLI command based on the given config to start the MCP on stdio.
     |-
-    (config) => ({ command: 'node', args: ['build/index.js'],
-     env: { 
-     SLACK_BOT_TOKEN: config.slackBotToken, 
-     SLACK_TEAM_ID: config.slackTeamId 
-     } })
+    (config) => ({
+      command: 'node',
+      args: ['build/index.js'],
+      env: {
+        SLACK_BOT_TOKEN: config.SLACK_BOT_TOKEN,
+        SLACK_TEAM_ID: config.SLACK_TEAM_ID
+      }
+    })
   exampleConfig:
-    slackBotToken: your_bot_token_here
-    slackTeamId: your_team_id_here
+    SLACK_BOT_TOKEN: your_bot_token_here
+    SLACK_TEAM_ID: your_team_id_here
